--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: tsjyyy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: tsjyyy
   template:
     metadata:
       labels:
-        app: ray
+        app: tsjyyy
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/tsjyyy:latest
+        name: tsjyyy
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "32641b10-a453-4a11-9ed0-13c8733cd610"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl5fde55"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "32641b10-a453-4a11-9ed0-13c8733cd610"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm6fdf66"
         - name: Share_Path
           value: "/v2link"
